<resources>
    <string name="app_name">covid19_ui</string>
    <string name="splash_text1">Coronavirus disease (COVID-19)</string>
    <string name="splash_text2">is an infectianus disease caused by a new\nvirus.</string>
    <string name="home_text1">Coronavirus Relief Fund</string>
    <string name="home_text2">to this fund will help to stop the virus spread and give\ncommunitieson the font lines.</string>
    <string name="home_text3">Symptoms of</string>
    <string name="home_text4">Covid 19</string>
    <string name="rv_home_text1">Fever</string>
    <string name="rv_home_text2">Dry Cough</string>
    <string name="rv_home_text3">Headache</string>
    <string name="rv_home_text4">Breathless</string>
    <string name="home_text5">Prevention</string>
    <string name="rv2_home_subtext1">hands often</string>
    <string name="rv2_home_text1">WASH</string>
    <string name="rv2_home_text2">COVER</string>
    <string name="rv2_home_subtext2">your cough</string>
    <string name="home_text11">Overview Worldwide</string>
    <string name="home_text12">21.118.594 confirmed</string>
    <string name="rv2_home_text3">ALWAYS</string>
    <string name="rv2_home_subtext3">clean</string>
    <string name="rv2_home_text4">USE</string>
    <string name="rv2_home_subtext4">mask</string>
    <string name="Statistic_text1">Statistic</string>
    <string name="Statistic_text2">Confirmed</string>
    <string name="Statistic_text3">Recovered</string>
    <string name="Statistic_text4">Male</string>
    <string name="Statistic_text5">Feamle</string>
    <string name="same_text">Cases</string>
    <string name="Statistic_text7">Global Cases of</string>
    <string name="Statistic_num_text1">23.32.1</string>
    <string name="Statistic_num_text2">5.12.4</string>
    <string name="Statistic_num_text3">1.25</string>
    <string name="Statistic_num_text4">59.5%</string>
    <string name="Statistic_num_text5">40.5%</string>

    <string name="splash_btn_text">GET STARTED</string>
    <string name="home_btn_text">DONATE NOW</string>
    <string name="home_btn_text2">EMERGENCY</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_na_drawer">NaDrawer</string>
</resources>
