<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
     >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Home">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardElevation="6dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_bg_backg"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/virs_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/virus2" />

                <ImageView
                    android:id="@+id/menu_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_menu" />

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/profile" />

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_img"
                    android:layout_marginTop="4dp"
                    android:text="@string/home_text4"
                    android:textColor="@android:color/white"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text1"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_text1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_text2"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/don_btn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text3"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/home_btn1_backg"
                    android:padding="5dp"
                    android:text="@string/home_btn_text"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

                <Button
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text3"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/home_btn2_backg"
                    android:padding="5dp"
                    android:text="@string/home_btn_text2"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/home_text3"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_holder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card1"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/text5"
            android:text="@string/home_text4"
            android:textColor="@color/colorBasce2"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text5"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/text7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/home_text5"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text7"
            android:layout_marginStart="16dp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv2"
            android:layout_gravity="center"
            android:layout_margin="16dp"
             android:padding="16dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/map_img"
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:layout_alignParentStart="true"
                    android:padding="5dp"
                    android:src="@drawable/map" />

                <TextView
                    android:id="@+id/map_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/map_img"
                    android:text="@string/same_text"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBasce2"
                    android:textSize="16sp"

                    />

                <TextView
                    android:id="@+id/map_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/map_text1"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/map_img"
                    android:text="@string/home_text11"
                    android:textColor="#101010"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/map_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/map_text2"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@id/map_img"
                    android:text="@string/home_text12"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/go_to_Statistic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_keyboard_arrow_right"
                    />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</ScrollView>