<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/splah_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg_backg"
        android:padding="16dp"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="240dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/nirs_img"
            android:layout_width="180dp"
            android:layout_height="170dp"
            android:layout_below="@id/logo_img"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:padding="16dp"
            android:src="@drawable/person" />

        <ImageView
            android:id="@+id/virs_img"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_below="@id/nirs_img"
            android:layout_marginStart="9dp"
            android:layout_marginTop="-76dp"
            android:padding="20dp"
            android:src="@drawable/virus" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/virs_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/splash_text1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/splash_text2"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/splash_btn_backg"
            android:padding="18dp"
            android:text="@string/splash_btn_text"
            android:textColor="@color/colorBasce1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/start_btn"/>


    </RelativeLayout>
</ScrollView>