<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Statistic">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_bg_backg"
            android:padding="16dp">

            <ImageView
                android:id="@+id/virs_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/virus2" />

            <ImageView
                android:id="@+id/menu_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_img"
                android:layout_marginTop="4dp"
                android:text="@string/Statistic_text1"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/map_img"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:src="@drawable/s" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/mor_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:padding="10dp"
                            android:src="@drawable/ic_more_black_blue" />

                        <TextView
                            android:id="@+id/map_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:layout_toEndOf="@id/mor_img"
                            android:text="@string/Statistic_text2"
                            android:textColor="#cccccc"
                            android:textSize="14sp"

                            />

                        <TextView
                            android:id="@+id/map_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/map_text1"
                            android:layout_marginTop="4dp"
                            android:layout_toEndOf="@id/mor_img"
                            android:text="@string/Statistic_num_text1"
                            android:textColor="#101010"
                            android:textSize="14sp" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/mor1_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:padding="10dp"
                            android:src="@drawable/ic_more_black_yel" />

                        <TextView
                            android:id="@+id/map1_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:layout_toEndOf="@id/mor1_img"
                            android:text="@string/Statistic_text3"
                            android:textColor="#cccccc"
                            android:textSize="14sp"

                            />

                        <TextView
                            android:id="@+id/map1_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/map1_text1"
                            android:layout_marginTop="4dp"
                            android:layout_toEndOf="@id/mor1_img"
                            android:text="@string/Statistic_num_text2"
                            android:textColor="#101010"
                            android:textSize="14sp" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/mor3_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:padding="10dp"
                            android:src="@drawable/ic_more_black_24dp" />

                        <TextView
                            android:id="@+id/map2_text1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:layout_toEndOf="@id/mor3_img"
                            android:text="deaths"
                            android:textColor="#cccccc"
                            android:textSize="14sp"

                            />

                        <TextView
                            android:id="@+id/map2_text2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/map2_text1"
                            android:layout_marginTop="4dp"
                            android:layout_toEndOf="@id/mor3_img"
                            android:text="@string/Statistic_num_text3"
                            android:textColor="#101010"
                            android:textSize="14sp" />


                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card2"
            android:gravity="center"
            android:id="@+id/se_layout">

            <androidx.cardview.widget.CardView
                android:id="@+id/s_card1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                android:layout_weight="1">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/meal_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:padding="10dp"
                        android:src="@drawable/meal" />

                    <TextView
                        android:id="@+id/meal_text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/meal_img"
                        android:text="@string/Statistic_text4"
                        android:textColor="#181717"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/meal_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/meal_text1"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/meal_img"
                        android:text="@string/Statistic_text2"
                        android:textColor="@android:color/darker_gray"

                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/map_text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/meal_text2"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@id/meal_img"
                        android:text="@string/same_text"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/map_text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/meal_img"
                        android:layout_marginTop="4dp"
                        android:text="@string/Statistic_num_text4"
                        android:textColor="#FF9800"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/s_card2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                android:layout_weight="1">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >

                    <ImageView
                        android:id="@+id/meal_img1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:padding="10dp"
                        android:src="@drawable/femeal" />

                    <TextView
                        android:id="@+id/meal1_text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/meal_img1"
                        android:text="@string/Statistic_text5"
                        android:textColor="#181717"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/meal1_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/meal1_text1"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@id/meal_img1"
                        android:text="@string/Statistic_text2"
                        android:textColor="@android:color/darker_gray"

                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/map1_text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/meal1_text2"
                        android:layout_marginTop="2dp"
                        android:layout_toEndOf="@id/meal_img1"
                        android:text="@string/same_text"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/map1_text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/meal_img1"
                        android:layout_marginTop="4dp"
                        android:text="@string/Statistic_num_text5"
                        android:textColor="#E91E63"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>


                <TextView
                    android:id="@+id/text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/se_layout"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/Statistic_text7"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/se_layout"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/text5"
                    android:text="@string/home_text4"
                    android:textColor="@color/colorBasce2"
                    android:textSize="20sp"
                    android:textStyle="bold"/>


                        <ImageView
                            android:id="@+id/map_img3"
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                             android:padding="5dp"
                            android:src="@drawable/map"
                            android:layout_below="@id/text5"
                            android:layout_marginTop="10dp"/>


    </RelativeLayout>
</ScrollView>